compiler-core/src/parse/snapshots/gleam_core__parse__tests__type_invalid_record_constructor_invalid_field_type.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\ntype User {\n    name: \"Test User\",\n}\n"
---
----- SOURCE CODE

type User {
    name: "Test User",
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:5
  │
3 │     name: "Test User",
  │     ^^^^ I'm expecting a type name here

Hint: Type names start with a uppercase letter, and can contain a-z, A-Z,
or 0-9.
