compiler-core/src/parse/snapshots/gleam_core__parse__tests__type_invalid_record_constructor_without_field_type.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub opaque type User {\n    name\n}\n"
---
----- SOURCE CODE

pub opaque type User {
    name
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:5
  │
3 │     name
  │     ^^^^ I was not expecting this

Each custom type variant must have a constructor:

pub opaque type User {
  User(
    name,
  )
}
