compiler-core/src/parse/snapshots/gleam_core__parse__tests__type_invalid_variant_constructor_without_field_and_type.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub type User {\n    \"id\": 123,\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:3:5
  │
3 │     "id": 123,
  │     ^^^^ I was not expecting this

Each custom type variant must have a constructor:

type User {
  User(
    field_label: TypeAnnotation,
  )
}
