compiler-core/src/parse/snapshots/gleam_core__parse__tests__unexpected_ampersand.snap
---
source: compiler-core/src/parse/tests.rs
expression: let wobble = 1 & 2
---
----- SOURCE CODE
let wobble = 1 & 2

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:16
  │
1 │ let wobble = 1 & 2
  │                ^ Unexpected `&`

Hint: Gleam does not have a bitwise '&' operator.
Hint: Use `int.bitwise_and` from `gleam/int`, or bit array syntax `<<>>`.
See: https://gleam-stdlib.hexdocs.pm/gleam/int.html#bitwise_and
