compiler-core/src/parse/snapshots/gleam_core__parse__tests__unicode_cyrillic_o.snap
---
source: compiler-core/src/parse/tests.rs
expression: "pub fn main() { о }"
---
----- SOURCE CODE
pub fn main() { о }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:17
  │
1 │ pub fn main() { о }
  │                 ^ Unexpected character

This looks like ascii latin letter o, but it is actually the unicode
Cyrillic letter о.
